--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,12 @@
 <project name="PDF-Splicer" basedir="." default="test">
 
-	<property name="src.dir"        value="src"/>
+	<property name="src.main.dir"        value="src"/>
 	<property name="lib.dir"        value="lib"/>
 	<property name="build.dir"      value="build"/>
     <property name="build.main.dir" value="${build.dir}/main"/>
 	<property name="build.test.dir" value="${build.dir}/test"/>
 	<property name="dist.dir"       value="dist"/>
-	<property name="test.dir"       value="test"/>
-    <property name="junit.dir"      value="${lib.dir}/junitlib"/>
+	<property name="src.test.dir"   value="test"/>
 	
 	<path id="classpath.main">
 		<fileset dir="${lib.dir}" includes="*.jar"/>
@@ -15,8 +14,7 @@
 	</path>
 		
 	<path id="classpath.test">
-        <fileset dir="${lib.dir}" includes="*.jar"/>
-		<fileset dir="${junit.dir}" includes="*.jar"/>
+        <fileset dir="${lib.dir}" includes="**/*.jar"/>
 		<pathelement location="${build.main.dir}"/>
 		<pathelement location="${build.test.dir}"/>
 	</path>
@@ -29,8 +27,8 @@
 	<target name="compile" depends="clean">
 		<mkdir dir="${build.main.dir}"/>
         <mkdir dir="${build.test.dir}"/>
-		<javac srcdir="${src.dir}" destdir="${build.main.dir}" includeantruntime="false" classpathref="classpath.main"/>
-		<javac srcdir="${test.dir}" destdir="${build.test.dir}" includeantruntime="false" classpathref="classpath.test"/>
+		<javac srcdir="${src.main.dir}" destdir="${build.main.dir}" includeantruntime="false" classpathref="classpath.main"/>
+		<javac srcdir="${src.test.dir}" destdir="${build.test.dir}" includeantruntime="false" classpathref="classpath.test"/>
 	</target>
 	
 	<target name="dist" depends="compile">
@@ -50,7 +48,7 @@
 			<classpath refid="classpath.test"/> 
 			<batchtest fork="yes">
 				<formatter type="plain" usefile="false"/>
-    			<fileset dir="${test.dir}" includes="**/*Test*.java"/>
+    			<fileset dir="${src.test.dir}" includes="**/*Test*.java"/>
 			</batchtest>
 		</junit>
 	</target>
