--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,15 @@
 <project name="PDF-Splicer" basedir="." default="test">
-
-    <property name="src.main.dir"   value="src"/>
+    
+	<property name="src.main.dir"   value="src"/>
     <property name="lib.dir"        value="lib"/>
     <property name="build.dir"      value="build"/>
     <property name="build.main.dir" value="${build.dir}/main"/>
     <property name="build.test.dir" value="${build.dir}/test"/>
     <property name="dist.dir"       value="dist"/>
     <property name="src.test.dir"   value="test"/>
+    <property name="one-jar.dist.dir" value="${lib.dir}/one-jar-ant"/>
+	
+    <taskdef name="one-jar" classname="com.simontuffs.onejar.ant.OneJarTask"/>
     
     <path id="classpath.main">
         <fileset dir="${lib.dir}" includes="*.jar"/>
@@ -32,18 +35,18 @@
     </target>
     
     <target name="dist" depends="compile">
-        <mkdir dir="${dist.dir}"/>
-        <jar jarfile="${dist.dir}/${ant.project.name}.jar" basedir="${build.main.dir}">
-            <manifest>
-                <attribute name="Main-Class" value="pdfsplicer.SplicerMain"/>
-                <attribute name="Class-Path" value="classpath.main"/>
-            </manifest>
-        </jar>
+        <one-jar destfile="${dist.dir}/${ant.project.name}.jar" onejarmainclass="pdfsplicer.SplicerMain">
+        	<main>
+        		<fileset dir="${build.main.dir}"/>
+        	</main>
+        	<lib>
+        		<fileset dir="${lib.dir}" includes="*.jar"/>
+        	</lib>
+        </one-jar>
+    	<delete file="${dist.dir}/main.jar"/>
     </target>
     
-    <target name="build" depends="dist"/>
-    
-    <target name="test" depends="build">
+    <target name="test" depends="compile">
         <junit fork="yes">
             <classpath refid="classpath.test"/> 
             <batchtest fork="yes">
